--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=conta_bancaria
+spring.datasource.url = jdbc:postgresql://localhost:5432/api-springboot-v4
+spring.datasource.username = postgres
+spring.datasource.password = adminroot
+spring.jpa.hibernate.ddl-auto = update 
